--- a/BirileriWebSitesi.csproj
+++ b/BirileriWebSitesi.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
+    <Folder Include="Models\NewFolder\" />
   </ItemGroup>
 
 </Project>
