--- a/BirileriWebSitesi.csproj
+++ b/BirileriWebSitesi.csproj
@@ -28,6 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Dashboard\Data\" />
+    <Folder Include="Areas\Dashboard\Models\" />
     <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
