--- a/.github/workflows/stop_service.yaml
+++ b/.github/workflows/stop_service.yaml
@@ -1,12 +1,9 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: publish
+name: stop service
 
-on:
-  push:
-    branches: [ "master" ]
-    
+on:    
   workflow_dispatch:
 jobs:
   build:
