--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,8 +4,8 @@
 name: publish
 
 on:
-  push:
-    branches: [ "master" ]
+  # push:
+   # branches: [ "master" ]
     
   workflow_dispatch:
 jobs:
