--- a/.github/workflows/display_logs.yaml
+++ b/.github/workflows/display_logs.yaml
@@ -18,6 +18,6 @@ jobs:
         chmod 600 key.pem
         ssh -o StrictHostKeyChecking=no -i key.pem $SERVER_USER@$SERVER_IP "journalctl -u birileri --no-pager -n 100"
       env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SERVER_USER: ${{ secrets.SSH_USER }}
-        SERVER_IP: ${{ secrets.SSH_HOST }}
+        SSH_PRIVATE_KEY: ${{ secrets.VM_SSH_KEY }}
+        SERVER_USER: ${{ secrets.VM_USER }}
+        SERVER_IP: ${{ secrets.VM_HOST }}
