--- a/.github/workflows/display_logs.yaml
+++ b/.github/workflows/display_logs.yaml
@@ -12,12 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Show logs from journalctl
-      run: |
-        echo "$SSH_PRIVATE_KEY" > key.pem
-        chmod 600 key.pem
-        ssh -o StrictHostKeyChecking=no -i key.pem $SERVER_USER@$SERVER_IP "journalctl -u birileri --no-pager -n 100"
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.VM_SSH_KEY }}
-        SERVER_USER: ${{ secrets.VM_USER }}
-        SERVER_IP: ${{ secrets.VM_HOST }}
+     - name: Show logs from journalctl
+       uses: appleboy/ssh-action@v1
+       with:
+        host: ${{ secrets.VM_HOST }}
+        username: ${{ secrets.VM_USER }}
+        password: ${{ secrets.VM_PASSWORD }}
+        port: ${{ secrets.VM_PORT }}
+        script: |
+         journalctl -u birileri --no-pager -n 100
+   
+       
