--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Release
-      run: dotnet publish -c Release -r linux-x64 --self-contained true -o ./publish
+      run: dotnet publish -c Release -r linux-x64 --self-contained true -p:PublishReadyToRun=true -o ./publish
 
     - name: Stop app on server
       uses: appleboy/ssh-action@v1
