email configuration made

--- a/BirileriWebSitesi.csproj
+++ b/BirileriWebSitesi.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Iyzipay" Version="2.1.67" />
+    <PackageReference Include="MailKit" Version="4.12.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="8.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="8.0.12" />
